<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_verticalAlign="baseline"
    android:background="@drawable/clouds_background">

    <ImageView
        android:id="@+id/joystickView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="252dp"
        android:contentDescription="@string/joystick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/joystick" />

    <Button
        android:id="@+id/Disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

    <SeekBar
        android:id="@+id/seekBarThrottle"
        android:layout_width="283dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toTopOf="@+id/Disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"/>

    <SeekBar
        android:id="@+id/seekBarRudder"
        android:layout_width="271dp"
        android:layout_height="21dp"
        android:layout_marginEnd="220dp"
        android:max="200"
        android:progress="100"
        android:rotation="270"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/Rudder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rudder"
        android:textColor="#E1A2E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <TextView
        android:id="@+id/Throttle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throttle"
        android:textColor="#E1A2E1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

</androidx.constraintlayout.widget.ConstraintLayout>